--- a/microsoft.html
+++ b/microsoft.html
@@ -47,7 +47,7 @@
         .swiper-pagination-bullets.swiper-pagination-horizontal,
         .swiper-pagination-custom,
         .swiper-pagination-fraction {
-            width: 15%;
+            width: 8%;
         }
     </style>
 </head>
@@ -91,7 +91,13 @@
                         <a href="">
                             <li class="surface">Surface</li>
                         </a>
-
+                        <a href="" class="xbox">
+                            <li class="xbox">Xbox</li>
+                        </a>
+                        <a  href="" class="help">
+                            <li class="help">支援</li>
+                        </a>
+                        
                         <input type="checkbox" id="more">
                         <label for="more">
                             <li>更多<i class="fa-solid fa-angle-down"></i></li>
@@ -105,12 +111,6 @@
                             </a>
                         </div>
 
-                        <a class="xbox">
-                            <li class="xbox">Xbox</li>
-                        </a>
-                        <a  class="help">
-                            <li class="help">支援</li>
-                        </a>
 
                     </ul>
                     <ul class="all-list">
