--- a/microsoft.html
+++ b/microsoft.html
@@ -47,7 +47,30 @@
         .swiper-pagination-bullets.swiper-pagination-horizontal,
         .swiper-pagination-custom,
         .swiper-pagination-fraction {
-            width: 8%;
+            width: 6%;
+        }
+
+        .swiper-button-next:after,
+        .swiper-button-prev:after {
+            font-size: 30px;
+            transition: all 0.5s;
+        }
+
+        .swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet,
+        .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
+            margin: 0 var(--swiper-pagination-bullet-horizontal-gap, 8px);
+        }
+
+        .swiper-pagination-bullet {
+            width: var(--swiper-pagination-bullet-width, var(--swiper-pagination-bullet-size, 12px));
+            height: var(--swiper-pagination-bullet-height, var(--swiper-pagination-bullet-size, 12px))
+        }
+        .swiper-button-next:hover::after{
+            margin-left: 20px;
+            
+        }
+        .swiper-button-prev:hover::after{
+            margin-right: 20px;
         }
     </style>
 </head>
@@ -94,10 +117,10 @@
                         <a href="" class="xbox">
                             <li class="xbox">Xbox</li>
                         </a>
-                        <a  href="" class="help">
+                        <a href="" class="help">
                             <li class="help">支援</li>
                         </a>
-                        
+
                         <input type="checkbox" id="more">
                         <label for="more">
                             <li>更多<i class="fa-solid fa-angle-down"></i></li>
