--- a/microsoft.html
+++ b/microsoft.html
@@ -26,7 +26,7 @@
         }
 
         .swiper-button {
-            height: 35px;
+            height: 55px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -36,6 +36,8 @@
         .swiper-button-next,
         .swiper-button-prev {
             margin-top: 0px;
+            width: 50px;
+            height: 50px;
             color: #000;
         }
 
@@ -47,7 +49,7 @@
         .swiper-pagination-bullets.swiper-pagination-horizontal,
         .swiper-pagination-custom,
         .swiper-pagination-fraction {
-            width: 6%;
+            width: 14%;
         }
 
         .swiper-button-next:after,
@@ -71,6 +73,10 @@
         }
         .swiper-button-prev:hover::after{
             margin-right: 20px;
+        }
+        .swiper-button-next:active,.swiper-button-prev:active{
+            border: 4px dashed black;
+            
         }
     </style>
 </head>
@@ -97,6 +103,7 @@
                     <div class="all">
                         <span>所有Microsoft<i class="fa-solid fa-angle-down"></i></span>
                         <div class="menu">☰</div>
+                        <div class="menuX">X</div>
                     </div>
                 </label>
                 <div class="hamburger">
@@ -329,7 +336,7 @@
                     <div class="swiper-slide">
                         <picture>
                             <source media="(max-width: 540px)" srcset="./image/banner(2)VP1-539x440.jfif">
-                            <source media="(max-width: 860px)" srcset="./image/banner(2)VP4-1399x600.jfif">
+                            <source media="(max-width: 860px)" srcset="./image/banner(2)VP5-539x440.jfif">
                             <source media="(max-width: 1086px)" srcset="./image/banner(2)VP4-1399x600.jfif">
                             <source media="(max-width: 1400px)" srcset="./image/banner(2)VP3-1399x600.jfif">
                             <img src="./image/banner(2)VP2-539x440.jfif">
@@ -715,4 +722,6 @@
 teacher sunyeh下午3:58
 https://ithelp.ithome.com.tw/articles/10272404
 teacher sunyeh下午4:59
-https://www.youtube.com/channel/UCguZS-y7codLSt6vpkVdnKg -->
+https://www.youtube.com/channel/UCguZS-y7codLSt6vpkVdnKg
+https://ianlunn.github.io/Hover/
+https://animate.style/ -->
